--- a/server/templates/job-not-found.html
+++ b/server/templates/job-not-found.html
@@ -2,8 +2,8 @@
 <html class="govuk-template no-js">
     <head>
         <meta charset="utf-8">
-        <title>Entity Extraction Service</title>
-        <link rel="stylesheet" href="govuk-frontend-4.3.1.min.css">
+        <title>Shortest Path Tool</title>
+        <link rel="stylesheet" href="/govuk-frontend-4.3.1.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
         <meta name="theme-color" content="#0b0c0c">
     </head>
@@ -15,7 +15,7 @@
               <div class="govuk-header__logo">
                 <a href="/" class="govuk-header__link govuk-header__link--homepage">
                     <span class="govuk-header__logotype-text">
-                        Entity extraction
+                        Shortest Path Tool
                     </span>
                   </span>
                 </a>
@@ -33,8 +33,8 @@
                         <h1 class="govuk-heading-xl">Oops</h1>
           
                         <div class="govuk-body">
-                            <p>Sorry, something has gone wrong</p>
-                            <p>Please contact technical support</p>
+                            <p>Sorry, something has gone wrong.</p>
+                            <p>Please contact technical support and quote job <b>{{ guid }}</b>.</p>
                         </div>               
                     </div>
                 </div>
