--- a/server/templates/processing-job.html
+++ b/server/templates/processing-job.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Shortest Path Tool</title>
+        <meta http-equiv="refresh" content="5" >
         <link rel="stylesheet" href="/govuk-frontend-4.3.1.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
         <meta name="theme-color" content="#0b0c0c">
@@ -30,11 +31,11 @@
                     
                 <div class="govuk-grid-row">
                     <div class="govuk-grid-column-two-thirds">
-                        <h1 class="govuk-heading-xl">Oops!</h1>
+                        <h1 class="govuk-heading-xl">Processing ...</h1>
           
                         <div class="govuk-body">
-                            <p>There is a problem with your data</p>
-                            <p>Reason: <b>{{ reason }}</b></p>
+                            <p>Your job is processing.</p>
+                            <p>If you need technical support, please quote job ID <b>{{ guid }}.</b></p>
                         </div>               
                     </div>
                 </div>
