--- a/server/templates/error.html
+++ b/server/templates/error.html
@@ -30,10 +30,11 @@
                     
                 <div class="govuk-grid-row">
                     <div class="govuk-grid-column-two-thirds">
-                        <h1 class="govuk-heading-xl">Oops!</h1>
+                        <h1 class="govuk-heading-xl">Oh dear ...</h1>
           
                         <div class="govuk-body">
-                            <p>There is a problem with your data</p>
+                            <p>There was a problem running the shortest path tool.</p>
+                            <p>It's not you, it's me.</p>
                             <p>Reason: <b>{{ reason }}</b></p>
                         </div>               
                     </div>
