--- a/server/templates/job-no-results.html
+++ b/server/templates/job-no-results.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Shortest Path Tool</title>
-        <link rel="stylesheet" href="govuk-frontend-4.3.1.min.css">
+        <link rel="stylesheet" href="/govuk-frontend-4.3.1.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
         <meta name="theme-color" content="#0b0c0c">
     </head>
@@ -25,17 +25,17 @@
         </header>
 
         <div class="govuk-width-container ">
-        
             <main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
-                    
                 <div class="govuk-grid-row">
                     <div class="govuk-grid-column-two-thirds">
-                        <h1 class="govuk-heading-xl">Oh dear ...</h1>
+                        <h1 class="govuk-heading-xl">No results</h1>
           
+                        <!-- Helpful note for user -->
                         <div class="govuk-body">
-                            <p>There was a problem running the shortest path tool on your data</p>
-                            <p>Reason: <b>{{ reason }}</b></p>
-                        </div>               
+                            <p>Sorry, no paths could be found for job <b>{{ guid }}</b>.</p>
+                            <p>Try increasing the number of hops.</p>
+                        </div>
+
                     </div>
                 </div>
             </main>
