--- a/server/templates/job-results.html
+++ b/server/templates/job-results.html
@@ -33,7 +33,7 @@
                         <!-- Helpful note for user -->
                         <div class="govuk-body">
                             <p>Processing complete for job <b>{{ guid }}</b>.</p>
-                            <a href="../download/{{guid}}">Download XLSX file</a>
+                            <a href="../download/{{guid}}">Download Excel file</a>
                         </div>
 
                     </div>
