Added specific job not found message.

--- a/server/templates/job-not-found.html
+++ b/server/templates/job-not-found.html
@@ -30,7 +30,7 @@
                     
                 <div class="govuk-grid-row">
                     <div class="govuk-grid-column-two-thirds">
-                        <h1 class="govuk-heading-xl">Oops</h1>
+                        <h1 class="govuk-heading-xl">Oops! Job not found</h1>
           
                         <div class="govuk-body">
                             <p>Sorry, something has gone wrong.</p>
