--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -62,8 +62,9 @@
                                 </div>                                  
                             </fieldset>
 
+                            <div class="govuk-!-padding-bottom-5"></div>
+
                             <!-- Dataset 1 -->
-                            </p>
                             <fieldset class="govuk-fieldset">
                                 <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                     <h1 class="govuk-fieldset__heading">
@@ -159,6 +160,7 @@
                                     It returns an Excel file that can be imported into i2 Analyst Notebook.</p>
                                 <p>Entity IDs can be separated by any combination of newlines, spaces, commas, semicolons or tabs.</p>
                                 <p>A grouping of entity IDs is called a dataset and its name is passed through to the Excel file.</p>
+                                <p>It is suggested that the dataset names should be short, e.g. use acronyms.</p>
                             </div>
 
                             <div class="govuk-body">
