Slight tweak to instructions.

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -42,6 +42,7 @@
                     <div class="govuk-form-group">
                         <form action="upload" method="post">
 
+                            <!-- Number of hops -->
                             <fieldset class="govuk-fieldset">
                                 <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                     <h1 class="govuk-fieldset__heading">
@@ -160,10 +161,7 @@
                                     It returns an Excel file that can be imported into i2 Analyst Notebook.</p>
                                 <p>Entity IDs can be separated by any combination of newlines, spaces, commas, semicolons or tabs.</p>
                                 <p>A grouping of entity IDs is called a dataset and its name is passed through to the Excel file.</p>
-                                <p>It is suggested that the dataset names should be short, e.g. use acronyms.</p>
-                            </div>
-
-                            <div class="govuk-body">
+                                <p>It is suggested that the dataset names should be short, for example by using acronyms.</p>
                                 <p>If one dataset is submitted, paths between all pairs of entities in that
                                 dataset are computed.</p>
                                 <p>If two or more datasets are submitted, paths between an entity in
