Removed erroneous forward slash in message.

--- a/server/templates/job-failed.html
+++ b/server/templates/job-failed.html
@@ -33,7 +33,7 @@
                         <!-- Helpful note for user -->
                         <div class="govuk-body">
                             <p>Unfortunately, the job failed.</p>
-                            <p>Error message: {{ reason }}/</p>
+                            <p>Error message: {{ reason }}</p>
                         </div>
 
                     </div>
