Made entity ID a hyperlink.

--- a/server/templates/entity.html
+++ b/server/templates/entity.html
@@ -134,7 +134,7 @@
                                 <tbody class="govuk-table__body">
                                   {{#each entity.LinkedEntities}}
                                   <tr class="govuk-table__row">
-                                    <td class="govuk-table__cell">{{ EntityId }}</td>
+                                    <td class="govuk-table__cell"><a href="{{ EntityId }}">{{ EntityId }}</a></td>
                                     <td class="govuk-table__cell">{{ InBipartite }}</td>
                                     <td class="govuk-table__cell">{{ InUnipartite }}</td>
                                   </tr>
