Added spidering to frontend.

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -80,7 +80,7 @@
                                         placeholder="" />
                                 </div>  
                                 <div class="govuk-form-group">
-                                    <label class="govuk-label" for="datasetName1">
+                                    <label class="govuk-label" for="datasetEntities1">
                                         Entity IDs
                                     </label>                                     
                                     <textarea id="dataset1" class="govuk-textarea" name="datasetEntities1" rows="4"
@@ -103,7 +103,7 @@
                                         placeholder="" />
                                 </div>  
                                 <div class="govuk-form-group">
-                                    <label class="govuk-label" for="datasetName1">
+                                    <label class="govuk-label" for="datasetEntities2">
                                         Entity IDs
                                     </label>                                      
                                     <textarea id="dataset2" class="govuk-textarea" name="datasetEntities2" rows="4"
@@ -119,14 +119,14 @@
                                     </h1>
                                 </legend>
                                 <div class="govuk-form-group">
-                                    <label class="govuk-label" for="datasetName2">
+                                    <label class="govuk-label" for="datasetName3">
                                         Name
                                     </label>                                    
                                     <input type="textarea" class="govuk-textarea" id="datasetName3" name="datasetName3"
                                         placeholder="" />
                                 </div>  
                                 <div class="govuk-form-group">
-                                    <label class="govuk-label" for="datasetName1">
+                                    <label class="govuk-label" for="datasetEntities3">
                                         Entity IDs
                                     </label>                                      
                                     <textarea id="dataset3" class="govuk-textarea" name="datasetEntities3" rows="4"
